# ChangeLog for media-video/x264-encoder
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

x264-encoder-9999 (10 Jun 2010)

  10 Jun 2010; Nikoli <nikoli@lavabit.com> +x264-encoder-9999.ebuild, +metadata.xml:
  Initial live ebuild
