@@ -1,6 +1,6 @@
 AUX x264-encoder-nolib-20100610.patch 1387 RMD160 e48bf4c0d1273afc11953d1c302e3641801b0573 SHA1 adfc109bda979a965c19983371316e4b4abe56a1 SHA256 1b061f6518fb52b0fc12a0cfd81eb82e1cfc67f136d45780f46cbe90ad34ffdf
 AUX x264-encoder-nolib-static-20100610.patch 1014 RMD160 84aa108966ccf7305a19d40a35cef578d39363dd SHA1 8cdf5339dc35a842c0ca3a27ab0b46b40784e254 SHA256 ec78028b2bf0599e4a5824ab443238812ceab0815523472f117f3e9024e3b7b9
 AUX x264-encoder-nostrip.patch 433 RMD160 81c3893b1a02839da38f34484c794996855fab5e SHA1 42c0807d6f2f13f848409d9545994c8b66338c8c SHA256 1210914cc52de908b840775ab8e4a107d95aeced690c2f115320d31e587a2ffa
-EBUILD x264-encoder-9999.ebuild 1473 RMD160 7aeece73eee1e2a86f725cf415e82df4d2de4970 SHA1 b427f36f6e4c6c49561a40e13b1211e96b202772 SHA256 f6baa9f17f22f60adf0c5f8cfd09358d35320e2c27904f81ff17cc60519c2b15
-MISC ChangeLog 266 RMD160 a154ee250080eadff1c48aff0954fe0fd0e774f2 SHA1 11a7186d885ef4c8572f7afd40f82a35ea14209c SHA256 22c5011f1aa4bbe998890cd66c1779173a6b2d9de0814bed9321d90c513f5deb
+EBUILD x264-encoder-9999.ebuild 1406 RMD160 f673d590d5b24be980f23d86d3e214cf122bf9e2 SHA1 289e9b8eaaff99d3bf015e63b78fbe13c8f0f5c4 SHA256 868a010974154202da66fa80f40a826800f52e6035bcf454cc459635a2b68095
+MISC ChangeLog 380 RMD160 cf79bcfcae6842fe67c663f34e21df1566527357 SHA1 1e3517181611a169055b8603b8aa509090fb6890 SHA256 2e6b7b9f7c6d092519dafed811705e3898f53e14f4fbff03a6a98f1adaa90530
 MISC metadata.xml 310 RMD160 f323679ae558fd00093ced7b96f9bc86f64b10a5 SHA1 4afcc7df7ed1180a071c33323b2a07dd615917be SHA256 3c4692974140398ebb289bfe3319608e2abed6c9b9954c1869205d8f5311962f
